crates/swc/tests/tsc-references/constructorParameterProperties2_es5.1.normal.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var C = function C(y) {
    "use strict";
    _classCallCheck(this, C);
};
var c;
var r = c.y;
var D = function D(y) {
    "use strict";
    _classCallCheck(this, D);
    this.y = y;
};
var d;
var r2 = d.y;
var E = function E(y) {
    "use strict";
    _classCallCheck(this, E);
    this.y = y;
};
var e;
var r3 = e.y; // error
var F = function F(y) {
    "use strict";
    _classCallCheck(this, F);
    this.y = y;
};
var f;
var r4 = f.y; // error
